--- a/Javascript/13-webpack/public/estilo.css
+++ b/Javascript/13-webpack/public/estilo.css
@@ -1,3 +1,12 @@
- body {
-     background-color: skyblue;
- }
+body {
+  background-color: skyblue;
+  background-image: url(6777486e7ac73f627f41dceddc0eedd1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh; }
+
+.botao {
+  background-color: #19B3E6;
+  color: #fff;
+  font-size: 1.8em; }
+
