--- a/Javascript/13-webpack/src/assets/css/estilo.css
+++ b/Javascript/13-webpack/src/assets/css/estilo.css
@@ -1,3 +1,7 @@
  body {
      background-color: skyblue;
+     background-image: url(../img/logo.png);
+     background-repeat: no-repeat;
+     background-position: center;
+     height: 100vh;
  }
