--- a/Projetos/LeitorTxt/css/style.css
+++ b/Projetos/LeitorTxt/css/style.css
@@ -8,39 +8,72 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #5e875b;
+    background-image: linear-gradient(to bottom right, white , rgb(214, 255, 152));
     flex-direction: column;
 }
 
-img {
-    top: 10px;
-    left: 0px;
+.logo{
     position: absolute;
-    display: inherit;
+    display: flex;
+    top: 0;
+    height: 20%;
+    background-color: rgba(241, 241, 241, 0.705);
+    width: 100%;
+    justify-content: center;
+    
+}
 
+.content {
+    height: 70%;
+    width: 80%;
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.left {
+    height: 100%;
+    width: 50;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.rigth {
+    height: 100%;
+    width: 50;
 }
 
 
-.titulo {
-    margin-bottom: 0px;
-    color: #6ab982;
-    font-size: 3em;
+
+
+div.titulo {
+    color: black;
+    font-size: .5em;
     text-shadow: 0px 0px 1px white;
-    margin-top: -1%;
+    width: 20%;
+    background-color: rgba(233, 233, 233, 0.815);
+    position: relative;
+    left: 0px;
+    top: 0px;
+    border-radius: 10px 30px 0px 0px;
+    flex-grow: 1;
+    
 }
 
 
 main {
-    width: 60%;
-    height: 70%;
-    margin-top: 5%;
-    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+    border-radius: 0px 20px 20px 20px;
     box-shadow: 1px 1px 10px #4a692d;
-    background-color: #58aa71c7;
+    background-color: rgba(233, 233, 233, 0.815);
     display: flex;
-    flex-direction: column;
+    flex-direction:row;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap ;
 
 }
 
@@ -92,8 +125,8 @@ input[type=number] {
 
 .btn {
     border-radius: 50px;
-    width: 200px;
-    height: 100%;
+    width: 100%;
+    height: 20%;
     box-shadow: 0px 0px 5px green;
     border: none;
     font-weight: bold;
@@ -101,17 +134,19 @@ input[type=number] {
     font-family: 'Sriracha', cursive;
     background-color: #6ab982;
     transition: .3s;
+    text-align: center;
 }
 
 #lbl {
     cursor: pointer;
     background-color: #6ab982;
+    width: 50%;
     padding: 20px 40px;
-    text-align: center;
     border-radius: 10px;
     box-shadow: 1px 1px 3px green;
     transition: .3s;
     font-family: 'Sriracha', cursive;
+    text-align: center;
 }
 
 #lbl:hover,
