--- a/Projetos/LeitorTxt/css/style.css
+++ b/Projetos/LeitorTxt/css/style.css
@@ -12,6 +12,8 @@ body {
     flex-direction: column;
 }
 
+
+
 .logo{
     position: absolute;
     display: flex;
@@ -20,7 +22,15 @@ body {
     background-color: rgba(241, 241, 241, 0.705);
     width: 100%;
     justify-content: center;
+    align-items: center;
     
+}
+
+img {
+    max-width:300px;
+    max-height:108px;
+    width: auto;
+    height: auto;
 }
 
 .content {
@@ -34,7 +44,7 @@ body {
 
 .left {
     height: 100%;
-    width: 50;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -42,7 +52,12 @@ body {
 }
 .rigth {
     height: 100%;
-    width: 50;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 
 
@@ -50,15 +65,15 @@ body {
 
 div.titulo {
     color: black;
-    font-size: .5em;
+    font-size: .7em;
     text-shadow: 0px 0px 1px white;
     width: 20%;
     background-color: rgba(233, 233, 233, 0.815);
     position: relative;
     left: 0px;
     top: 0px;
+    text-align: center;
     border-radius: 10px 30px 0px 0px;
-    flex-grow: 1;
     
 }
 
@@ -112,25 +127,51 @@ input[type=number] {
 }
 
 
+
+.fa-file-excel {
+    color: green;
+}
+
+.fa-file-csv {
+    color: skyblue;
+}
+
+
+
+.select,
+.icon {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+
+}
+
+.select{
+    justify-content: space-around;
+}
+
+
 #radio {
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 7em;
     width: 100%;
     display: flex;
-    justify-content: space-around;
-    align-items: initial;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 70%;
 }
 
 
 
 .btn {
-    border-radius: 50px;
-    width: 100%;
-    height: 20%;
-    box-shadow: 0px 0px 5px green;
+    border-radius: 20px;
+    width: 50%;
+    height: 15%;
+    box-shadow: 1px 1px 3px grey;
     border: none;
     font-weight: bold;
-    margin-left: 30%;
     font-family: 'Sriracha', cursive;
     background-color: #6ab982;
     transition: .3s;
@@ -153,4 +194,34 @@ input[type=number] {
 .btn:hover {
     background-color: #3e694b;
     color: whitesmoke;
+}
+
+
+/*      UTILIZANDO MEDIA QUERY      */
+
+
+@media (max-width: 900px) {
+    .left {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .rigth {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
+    
+    body{
+        
+    background-image: none;
+        background-color: rgba(214, 255, 152, 0.582);
+    }
 }
