--- a/Projetos/LeitorTxt/css/style.css
+++ b/Projetos/LeitorTxt/css/style.css
@@ -200,17 +200,19 @@ input[type=number] {
 /*      UTILIZANDO MEDIA QUERY      */
 
 
+
 @media (max-width: 900px) {
     .left {
-        height: 100%;
+        height: 70%;
         width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
     }
+
     .rigth {
-        height: 100%;
+        height: 30%;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -218,10 +220,15 @@ input[type=number] {
         align-items: center;
         align-content: center;
     }
-    
-    body{
-        
-    background-image: none;
+
+    body {
+
+        background-image: none;
         background-color: rgba(214, 255, 152, 0.582);
+    }
+    main {
+        display: block;
+        height: 800px;
+        margin: 20px;
     }
 }
