--- a/MiniProjetos/TodoList/style.css
+++ b/MiniProjetos/TodoList/style.css
@@ -76,10 +76,31 @@ ol li {
     counter-increment: my-counter;
 }
 
-ol.Completa li {
+ol.completa li {
     background: #00ff62;
 }
 
 ol li::before{
     content: counter(my-counter);
+    background: #231381;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    display: inline-block;
+    line-height: 2rem;
+    text-align: center;
+    color: #fff;
+    margin-right: 0.5rem;
+}
+
+li button{
+    float: right;
+    padding: 5px;
+    font-size: 28px;
+    line-height: 28px;
+    margin-right: 15px;
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
