--- a/Projetos/LeitorTxt/css/style.css
+++ b/Projetos/LeitorTxt/css/style.css
@@ -216,13 +216,13 @@ input[type=file] {
 
 #json {
     transition: .5s;
-    width: 35%;
+    width: 80%;
     height: 80%;
 
 }
 #json:hover {
-    width: 50%;
-    height: 100%;
+    height: 150%;
+    cursor: pointer;
 }
 
 
