--- a/Javascript/15-bootstrap/projeto-galeria/src/pages/template/header.html
+++ b/Javascript/15-bootstrap/projeto-galeria/src/pages/template/header.html
@@ -3,13 +3,13 @@
         <a href="#" class="navbar-brand d-flex align-items-center">
             <i class="fa fa-camera-retro"></i><strong class="pl-2">GALERIA</strong>
         </a>
-        <button class="navbar-toggler collapse" data-toggle="collapse" data-target="#header">
+        <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#header">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </div>
 
-<div class="bg-dark collapse" id="hearder">
+<div class="bg-dark collapse" id="header">
     <div class="container">
         <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
