--- a/Javascript/16-react/crud/frontend/src/components/template/Nav.css
+++ b/Javascript/16-react/crud/frontend/src/components/template/Nav.css
@@ -17,3 +17,23 @@ aside.menu-area {
 .menu a:hover {
     background: linear-gradient(135deg, #07a7e3 0%, #32dac3 100%) ;
 }
+
+@media(max-width:768px) {
+    .menu {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .menu a {
+        display: inline;
+        padding: 10px;
+        margin: 0px;
+        border-radius: 2px;
+    }
+
+    .menu {
+        height: 100%;
+        justify-content: space-around;
+    }
+}
