--- a/Projetos/maratona-discover/src/views/index.ejs
+++ b/Projetos/maratona-discover/src/views/index.ejs
@@ -76,10 +76,12 @@
         <h1 class="sr-only">Trabalhos</h1>
 
         <div class="cards">
+          <% jobs.forEach(() => { %> 
+
           <div class="card progress" data-id="1">
             <div class="id column">1</div>
             <div class="name column">
-              Pizzaria Guloso
+              <%= jobs.length %> 
             </div>
             <div class="deadline column">
               <span>Prazo</span>
@@ -105,6 +107,8 @@
               </button>
             </div>
           </div>
+
+          <% }) %> 
           <!-- end card -->
 
           <div class="card done" data-id="2">
