--- a/Javascript/19-Angular/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/Javascript/19-Angular/frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,3 +1,11 @@
 <p >product-create works!</p>
 
-<button >fazer algo</button>
+
+<button mat-raised-button (click)="createProduct()" color="primary">
+    Salvar
+</button>
+
+
+<button mat-raised-button (click)="cancel()" color="warn">
+    Cancelar
+</button>
