--- a/Javascript/19-Angular/frontend/src/app/components/product/product-read/product-read.component.css
+++ b/Javascript/19-Angular/frontend/src/app/components/product/product-read/product-read.component.css
@@ -1,3 +1,14 @@
 table {
     width: 100%;
 }
+
+i.edit {
+    color: gray;
+    margin-right: 20px;
+    margin-left: -20px;
+    
+}
+
+i.delete {
+    color: #e35e6b
+}
