--- a/Javascript/19-Angular/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/Javascript/19-Angular/frontend/src/app/components/product/product-read/product-read.component.html
@@ -8,16 +8,31 @@
   
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef >Name</th>
+        <th mat-header-cell *matHeaderCellDef >Nome</th>
         <td mat-cell *matCellDef="let row">{{row.name}}</td>
       </ng-container>
       
       <!-- Price Column -->
       <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef >Price</th>
+        <th mat-header-cell *matHeaderCellDef >Preço</th>
         <td mat-cell *matCellDef="let row"> {{row.price | currency: 'BRL'}}</td>
       </ng-container>
-  
+      
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef >Ações</th>
+        <td mat-cell *matCellDef="let row">
+          <a routerLink="/products/update/{{ row.id }}">
+            <i class="material-icons edit">edit</i>
+          </a>
+          <a routerLink="/products/delete/{{ row.id }}">
+            <i class="material-icons delete">delete</i>
+          </a>
+        </td>
+      </ng-container>
+      
+     
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
