--- a/Javascript/19-Angular/frontend/src/app/components/product/product-read2/product-read2.component.html
+++ b/Javascript/19-Angular/frontend/src/app/components/product/product-read2/product-read2.component.html
@@ -8,15 +8,16 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
       <td mat-cell *matCellDef="let row">{{row.name}}</td>
     </ng-container>
     
     <!-- Price Column -->
     <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Preço</th>
       <td mat-cell *matCellDef="let row">{{row.price}}</td>
     </ng-container>
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
