--- a/Javascript/19-Angular/frontend/src/styles.css
+++ b/Javascript/19-Angular/frontend/src/styles.css
@@ -10,3 +10,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .v-middle {
     vertical-align: middle;
 }
+
+.msg-success {
+    background: #28a745;
+    color: #fff;
+}
+
+.msg-error {
+    background: #e35e6b;
+    color: #fff;
+}
+
+
